fixed footer spacing, converted px to rem

--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -15,15 +15,17 @@ footer {
 
     li {
       list-style: none;
+      margin-right: 0.5rem;
+      margin-bottom: 1.25rem;
 
       a {
-        width: 80px;
-        height: 80px;
+        width: 5rem;
+        height: 5rem;
         background-color: #fff;
         text-align: center;
-        line-height: 80px;
-        font-size: 35px;
-        margin: 0 10px;
+        line-height: 5rem;
+        font-size: 2.1875rem;
+        margin: 0 0.625rem;
         display: block;
         border-radius: 50%;
         position: relative;
@@ -61,7 +63,7 @@ footer {
     }
 
     li {
-      margin-top: 30px;
+      margin-top: 1.875rem;
 
       &:nth-child(1) a:before {
         background: #0077b5;
